Fixed Overflow Issue

--- a/public/index.css
+++ b/public/index.css
@@ -1174,12 +1174,12 @@ video {
   width: 83.333333%;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
-}
-
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-1\/12 {
@@ -1966,6 +1966,11 @@ video {
   padding-right: 0px;
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
 .px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
@@ -1984,11 +1989,6 @@ video {
 .py-\[12px\] {
   padding-top: 12px;
   padding-bottom: 12px;
-}
-
-.py-9 {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
 }
 
 .pt-2 {
@@ -2985,12 +2985,12 @@ video {
     grid-row: span 1 / span 1;
   }
 
-  .sm\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .sm\:mt-0 {
     margin-top: 0px;
+  }
+
+  .sm\:mt-8 {
+    margin-top: 2rem;
   }
 
   .sm\:block {
@@ -3029,10 +3029,6 @@ video {
     width: 80%;
   }
 
-  .sm\:w-7 {
-    width: 1.75rem;
-  }
-
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3061,16 +3057,16 @@ video {
     padding-right: 46px;
   }
 
+  .sm\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
   .sm\:pt-2 {
     padding-top: 0.5rem;
   }
 
   .sm\:pl-2 {
     padding-left: 0.5rem;
-  }
-
-  .sm\:pb-2 {
-    padding-bottom: 0.5rem;
   }
 
   .sm\:text-left {
@@ -3082,9 +3078,9 @@ video {
     line-height: 1.25rem;
   }
 
-  .sm\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .sm\:leading-5 {
@@ -3145,8 +3141,8 @@ video {
     height: 20rem;
   }
 
-  .md\:h-7 {
-    height: 1.75rem;
+  .md\:w-11\/12 {
+    width: 91.666667%;
   }
 
   .md\:w-3\/4 {
@@ -3159,10 +3155,6 @@ video {
 
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:w-11\/12 {
-    width: 91.666667%;
   }
 
   .md\:min-w-full {
@@ -3327,16 +3319,16 @@ video {
     height: 1.25rem;
   }
 
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
   .lg\:w-9\/12 {
     width: 75%;
   }
 
   .lg\:w-11\/12 {
     width: 91.666667%;
-  }
-
-  .lg\:w-3\/4 {
-    width: 75%;
   }
 
   .lg\:max-w-sm {
@@ -3447,12 +3439,12 @@ video {
     height: 2.25rem;
   }
 
-  .xl\:w-16 {
-    width: 4rem;
-  }
-
   .xl\:w-11\/12 {
     width: 91.666667%;
+  }
+
+  .xl\:w-16 {
+    width: 4rem;
   }
 
   .xl\:w-full {
@@ -3549,13 +3541,13 @@ video {
           display: flex;
         }
 
-        .md\:lg\:xl\:2xl\:text-xl {
-          font-size: 1.25rem;
+        .md\:lg\:xl\:2xl\:text-lg {
+          font-size: 1.125rem;
           line-height: 1.75rem;
         }
 
-        .md\:lg\:xl\:2xl\:text-lg {
-          font-size: 1.125rem;
+        .md\:lg\:xl\:2xl\:text-xl {
+          font-size: 1.25rem;
           line-height: 1.75rem;
         }
       }
